# yt-load-api

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/routers/: download.py
src/schemas/: file_type.py
src/services/: download_audio.py  download_video.py
src/utils/: convert_to_mp3.py  file_manager.py  logger_config.py  remove_file.py
