[project]
name = "ytLoad"
version = "0.1.0"
description = "download media"
authors = [
    {name = "philipecerqueira", email = "philipe.cerq@gmail.com"},
]
dependencies = ["pydub>=0.25.1", "fastapi>=0.115.5", "uvicorn>=0.32.0", "ruff>=0.7.4", "pytubefix>=8.4.0", "pre-commit>=4.0.1", "python-dotenv>=1.0.1"]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.scripts]
start = "uvicorn src.main:app --reload"
